--- a/src/views/test1/test1.html
+++ b/src/views/test1/test1.html
@@ -2,4 +2,6 @@
     <h1>Test 1</h1>
 
     <canvas id="glCanvas"></canvas>
+
+    <div style="width: 100px; height:100px; background: #FB0"></div>
 </template>
